styles.css
/* BASE SETUP */
*,
*::after,
*::before {
  margin: 0;
  padding: 0;
  box-sizing: inherit;
}

html {
  font-size: 100%;
}

body {
  box-sizing: border-box;
  background-color: #eee;
  position: relative;
}

h1 {
  font-family: 'Commissioner';
  font-weight: 700;
  font-size: 1.6rem;
}

h2 {
  font-family: 'Commissioner';
  font-weight: 700;
  font-size: 1.15rem;
}

h3 {
  font-family: 'Commissioner';
  font-weight: 400;
  font-size: 1rem;
}

.cta:link,
.cta:visited {
  text-decoration: none;
  font-family: "Commissioner";
  font-weight: 700;
  font-size: .95rem;
  border-radius: 10rem;
  border: none;
  padding: 1rem 2.4rem;
  display: inline-block;
  transition: all .2s;
}

.main {
  display: flex;
  flex-direction: column;
  align-items: center;
  transform: translateY(-4%);
}
/* HEADER */
.header {
  height: 60vh;
  background-image: url(images/image-hero-desktop.jpg);
  background-size: cover;
  position: relative;
}

.heading {
  position: absolute;
  top: 10%;
  left: 11.5%;
  z-index: 1001;
}

.heading-text {
  color: #fff;
}

.sidebar {
  position: absolute;
  top: 11%;
  right: 6%;
  display: none;
  cursor: pointer;
  z-index: 1001;
  transform: scale(1);
  transition: all .5s ease;
}

.sidebar-icon {
  fill: #fff;
  width: 2rem;
  height: 2rem;
}

.navigation {
  display: flex;
  width: 40%;
  float: right;
  justify-content: space-around;
  transform: translate(-2.5rem, 2.9rem);
}

.nav-item__text {
  font-family: 'Commissioner';
  font-weight: 500;
  font-size: 1rem;
  color: #fff;
  text-decoration: none;
  transition: all .3s;
}

.nav-item__text:hover {
  color: #04E7E0;
}

/* FEATURES */
.features {
  border: 1px solid #DCDCDC;
  border-radius: .5rem;
  background-color: #fff;
  text-align: center;
  width: 50%;
  margin-bottom: 2.5rem;
}

.features__icon-box {
  transform: translateY(-50%);
}

.features__content {
  margin-bottom: 2rem;
}

.features__text-box {
  margin: 0 2rem 2.5rem 2rem;
}

.features__heading {
  margin-bottom: 1rem;
}

.features__text {
  color: hsl(0, 0%, 48%);
}

.features__btns {
  height: 60px;
  position: relative;
}

.cta__back-this-project {
  height: 3.5rem;
  background-color: hsl(176, 50%, 47%);
  color: #fff;
  float: left;
  margin-left: 2rem;
  margin-bottom: 2rem;
}

.cta__back-this-project:hover {
  background-color: hsl(176, 72%, 28%);
}

.cta__bookmark {
  height: 3.5rem;
  width: 12rem;
  text-align: right;
  background-color: #eee;
  color: hsl(0, 0%, 48%);
  transition: all .5s;
}

.cta__bookmark:hover {
  color: #A5A5A5;
}

.cta__bookmark:hover ~ .features__bookmark-icon circle {
  fill: #5F5F5F !important;
}

.cta__bookmarked:link,
.cta__bookmarked:visited {
  height: 3.5rem;
  width: 12rem;
  text-align: right;
  background-color: #eee;
  color: hsl(176, 50%, 47%);
  padding: 1rem 2rem;
}

.cta__bookmarked:hover {
  color: hsl(176, 72%, 28%);
}

.cta__bookmarked:hover ~ .features__bookmark-icon circle {
  fill: hsl(176, 72%, 28%) !important;
}

.features__bookmark {
  display: inline-block;
  position: relative;
  float: right;
  margin-right: 2rem;
  margin-bottom: 2rem;
}

.features__bookmark-icon {
  width: 3.5rem;
  height: 3.5rem;
  position: absolute;
  transform: translateX(-340%);
  transition: all .2s;
}

.features__bookmark-icon circle {
  transition: all .3s;
}

/* STATISTICS */
.statistics {
  border: 1px solid #DCDCDC;
  border-radius: .5rem;
  background-color: #fff;
  width: 50%;
  margin-bottom: 2.5rem;

  display: flex;
  flex-direction: column;
}

.statistics__item--raised-money {
  transition: all .2s;
}

.statistics__item--total-backers {
  transition: all .2s;
}

.statistics__box {
  display: flex;
  justify-content: space-around;
}

.statistics__box > :not(:first-child) {
  border-left: 1px solid #DCDCDC;
  padding-left: 2.8rem;
  margin-left: 0;
}

.statistics__item {
  margin: 2.5rem 0;
}

.statistics__item--text {
  color: hsl(0, 0%, 48%);
  margin-top: .5rem;
}

.statistics__progress-bar {
  width: 90%;
  background-color: #eee;
  border-radius: 100rem;
  height: .8rem;
  margin: 0 auto 2rem auto;
}

.statistics__user-progress {
  width: 1%;
  background-color: hsl(176, 50%, 47%);
  border-radius: 100rem;
  height: .8rem;
  transition: width 3s 2s ease;
}

/* ABOUT */
.about {
  border: 1px solid #DCDCDC;
  border-radius: .5rem;
  background-color: #fff;
  width: 50%;

  display: flex;
  flex-direction: column;
}

.about__heading-box {
  margin: 2rem;
}

.about__text-box {
  margin: 0 2rem;
  line-height: 1.8rem;
}

.about__text {
  color: hsl(0, 0%, 48%);
}

.about__item {
  border: .1px solid #CDCDCD;
  border-radius: .5rem;
  width: 90%;
  align-self: center;
  margin: 2rem 2rem 0 2rem;
}

.about > :last-child {
  margin-bottom: 4rem;
}

.about__item--header {
  margin: 1.5rem 2rem;
  display: flex;
  justify-content: space-between;
}

.item-pledge {
  text-decoration: none;
  color: hsl(176, 50%, 47%);
  font-family: "Commissioner";
  font-weight: 500;
  font-size: .95rem;
  margin: .2rem .5rem;
}

.about__item--text-box {
  margin: 1rem 2rem;
}

.about__item--text {
  color: hsl(0, 0%, 48%);
  line-height: 1.8rem;
}

.about__item--reward {
  margin: 1.5rem 2rem;
  display: flex;
  justify-content: space-between;
}

.item-number,
.btp-item-number {
  margin-top: .5rem;
}

.about__item--left {
  display: flex;
}

.items-left {
  font-family: 'Commissioner';
  font-weight: 400;
  font-size: 1rem;
  color: hsl(0, 0%, 48%);
  transform: translateY(30%);
}

.cta__reward:link,
.cta__reward:visited {
  text-align: center;
  width: 11rem;
  height: 3.3rem;
  padding: 1rem 2rem;
  background-color: hsl(176, 50%, 47%);
  color: #fff;
  font-size: 1rem;
  font-weight: 500;
}

.cta__reward:hover {
  background-color: hsl(176, 72%, 28%);
}

/* OVERLAY */
.btp-overlay {
  position: fixed;
  height: 100vh;
  width: 100%;
  top: 0;
  left: 0;
  visibility: hidden;
  overflow-y: scroll;
  transition: opacity .4s ease;
  padding-bottom: 5rem;
  background-color: rgba(0, 0, 0, .3);
}
/* ... */

